# Vision-Algorithms-Exercises

./: .gitignore  CMakeLists.txt  README.md
dependencies/: install-opencv-apt.sh  install-opencv-mac.sh  install-opencv-pacman.sh
include/: base-functions.h  ex2-functions.h  ex3-functions.h  ex4-functions.h  ex5-functions.h  ex7-functions.h
src/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  test.cpp
src/ex1/: ex1.cpp  ex1mod.cpp  findcheckerboard.cpp
